Move webshop buy button to fixed position at bottom of screen on mobile devices

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -82,6 +82,21 @@ html, body {
 	.sidebar-buy-btn.cart-empty {
 		opacity: 0.5;
 	}
+
+	@include media("<=tablet") {
+		.sidebar-buy-btn {
+			display: block;
+			position: fixed;
+		    bottom: 0px;
+		    left: 0px;
+		    z-index: 2;
+		    border-radius: 0px;
+		}
+
+		.sidebar-buy-btn.cart-empty {
+			display: none;
+		}
+	}
 }
 
 .product.active {
